Pranadeep-Muppa/voting-app-infra/argocd/db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: demo-voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: postgres:9.4
          ports:
            - containerPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: demo-voting-app
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
